--- a/docker-compose-non-dev.yml
+++ b/docker-compose-non-dev.yml
@@ -31,6 +31,8 @@ services:
     restart: unless-stopped
     volumes:
       - redis:/data
+    networks:
+      - mdms
 
   db:
     env_file: docker/.env-non-dev
@@ -40,6 +42,8 @@ services:
     volumes:
       - db_home:/var/lib/postgresql/data
       - ./docker/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+    networks:
+      - mdms
 
   superset:
     env_file: docker/.env-non-dev
@@ -52,6 +56,8 @@ services:
       - 8088:8088
     depends_on: *superset-depends-on
     volumes: *superset-volumes
+    networks:
+      - mdms
 
   superset-init:
     image: *superset-image
@@ -63,6 +69,8 @@ services:
     volumes: *superset-volumes
     healthcheck:
       disable: true
+    networks:
+      - mdms
 
   superset-worker:
     image: *superset-image
@@ -79,6 +87,8 @@ services:
           "CMD-SHELL",
           "celery -A superset.tasks.celery_app:app inspect ping -d celery@$$HOSTNAME",
         ]
+    networks:
+      - mdms
 
   superset-worker-beat:
     image: *superset-image
@@ -91,6 +101,8 @@ services:
     volumes: *superset-volumes
     healthcheck:
       disable: true
+    networks:
+      - mdms
 
 volumes:
   superset_home:
@@ -99,3 +111,7 @@ volumes:
     external: false
   redis:
     external: false
+
+networks:
+  mdms:
+    external: true
